tests/cases/smoke/invalid/redeclaration_same_scope.ty
var count = 0
var count = 1
